warrior ui: Remove 'Task Status Summary' h3 into a title attr. Fix align.

--- a/seesaw/public/style.css
+++ b/seesaw/public/style.css
@@ -202,7 +202,7 @@ table.time-left td span {
 
 #task-summary {
   position: relative;
-  margin: 10px 5px 10px 5px;
+  margin: 10px 10px 10px 10px;
 }
 #task-summary h3 {
   font-size: 150%;
